--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,13 @@
 
 .container {
   width: 750px;
-  height: 1000px;
+  height: 400px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
