--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,18 @@
 
 .container {
   width: 750px;
-  height: 400px;
+  height: 420px;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   width: 500px;
+  padding: 0px;
+}
+
+.header span {
+  font-size: 12px
 }
 
 @media (prefers-reduced-motion: no-preference) {
