marker size control

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,18 @@
   font-size: 12px
 }
 
+.header label {
+  font-size: 12px
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 200px
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
