clear selection, slider etc

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  width: 500px;
+  width: 540px;
   height: 20px;
   padding: 5px;
 }
@@ -32,6 +32,10 @@
 
 .header label {
   font-size: 12px
+}
+
+.header input[type=number] {
+  width: 20%
 }
 
 .form {
