--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,21 @@
 }
 
 .container {
-  width: 750px;
-  height: 420px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 .header {
   display: flex;
-  justify-content: space-between;
-  width: 540px;
+  justify-content: space-around;
+  width: 100%;
   height: 20px;
   padding: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
 .header span {
