--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,16 @@
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
+  width: 750px;
+  height: 420px;
 }
 
 .header {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  width: 540px;
   height: 20px;
   padding: 5px;
-  align-items: center;
-  justify-content: center;
 }
 
 .header span {
