--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,26 @@
 }
 
 .container {
-  width: 750px;
-  height: 420px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  width: 540px;
+  width: 100%;
+  max-width: 550px;
   height: 20px;
   padding: 5px;
+}
+
+.mapHolder {
+  width: 100%;
+  max-width: 550px;
 }
 
 .header span {
