--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .base {
   display: flex;
   justify-content: center;
@@ -36,7 +27,7 @@
   max-width: 550px;
 }
 
-.header span {
+.header p {
   font-size: 12px
 }
 
@@ -48,40 +39,15 @@
   width: 20%
 }
 
+.header input[type=text] {
+  font-size: 16pt;
+  height: fit-content;
+}
+
 .form {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
   width: 200px
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
