--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   justify-content: space-between;
   width: 100%;
   max-width: 550px;
-  height: 20px;
+  height: fit-content;
   padding: 5px;
 }
 
